--- a/app/views/album_boards/search.html.erb
+++ b/app/views/album_boards/search.html.erb
@@ -7,7 +7,7 @@
       <%= form_with url: search_album_boards_path, method: :get, local: true do |f| %>
       <div class="form-group">
         <%= f.text_field :search, class:"form-control my-4" %>
-        <%= f.submit 'アルバム名検索', name: nil,class:"btn blue-gradient z-depth-1a submit-btn" %>
+        <%= f.submit 'アルバム名検索', name: nil,class:"btn main-btn" %>
       </div>
       <% end %>
     </div>
