--- a/app/views/album_boards/new.html.erb
+++ b/app/views/album_boards/new.html.erb
@@ -1,13 +1,18 @@
 <% provide(:title, "create") %>
-<div class="row d-flex justify-content-center">
-  <%= form_with(model: @albumboard, local: true) do |f| %>
-    <%= f.label :アルバム名 %>
-    <%= f.text_field :albums, class:"form-control" %>
-    <p>アルバム名は正しいですか？</p>
-  <div class="text-center my-4">
-    <%= f.submit class:"btn blue-gradient btn-block z-depth-1a submit-btn" %>
+<div class="background-color">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <%= form_with(model: @albumboard, local: true) do |f| %>
+          <%= f.label :アルバム名, class: "album-create-name" %>
+          <%= f.text_field :albums, class:"form-control album-create-form" %>
+        <div class="text-center album-create-btn">
+          <p>アルバム名は正しいですか？</p>
+          <%= f.submit 'レビューページを作成する', class:"btn album-create-submit" %>
+        </div>
+        <%= hidden_field_tag :album_icon, @album_icon %>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <%= hidden_field_tag :album_icon, @album_icon %>
-  <% end %>
 </div>
