--- a/app/views/board_reviews/_form.html.erb
+++ b/app/views/board_reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+<button type="button" class="btn main-btn" data-toggle="modal" data-target="#exampleModal">
   レビューを作成する
 </button>
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
