--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
             <%= link_to 'マイページ', current_user, class: "header-tag" %>
           </li>
           <li class="nav-item">
-            <%= link_to 'ユーザー一覧', users_path, class: "header-tag" %>
+            <%= link_to 'ユーザー検索', search_users_path, class: "header-tag" %>
           </li>
           <li class="nav-item">
             <%= link_to 'レビューページ一覧', root_path, class: "header-tag" %>
