--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,12 +1,12 @@
 <% @user ||= current_user %>
 <div class="stats">
-  <a href="<%= following_user_path(@user) %>", class="btn btn-primary">
+  <a href="<%= following_user_path(@user) %>", class="btn btn-primary btn-sm">
     <strong id="following" class="stat">
       <%= @user.following.count %>
     </strong>
     フォロー中
   </a>
-  <a href="<%= followers_user_path(@user) %>", class="btn btn-primary">
+  <a href="<%= followers_user_path(@user) %>", class="btn btn-primary btn-sm">
     <strong id="followers" class="stat">
       <%= @user.followers.count %>
     </strong>
