add search function to albumboard index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -431,6 +431,17 @@ footer {
 
 
 
+/*album_board/index*/
+.album-index-search {
+  text-align: center;
+}
+
+.album-index-field {
+  width: 50%;
+}
+
+
+
 /*album_board/new*/
 
 .album-create-name {
