--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
             <%= link_to 'ユーザー検索', search_users_path, class: "header-tag" %>
           </li>
           <li class="nav-item">
-            <%= link_to 'レビューページ一覧', root_path, class: "header-tag" %>
+            <%= link_to 'レビューページ一検索', album_boards_path, class: "header-tag" %>
           </li>
           <li class="nav-item">
             <%= link_to 'アルバムを探す', search_album_boards_path, class: "header-tag" %>
