--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,6 +52,10 @@ ul {
   }
 }
 
+.footer-space {
+  padding-bottom: 20px;
+}
+
 
 /*homepage*/
 .jumbotron { 
@@ -333,6 +337,7 @@ footer {
 .user-show-follow-form {
   margin-top: 10px;
 }
+
 
 
 /*board_reviews/_form*/
