--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,11 @@
 <li class="user-index-profile">
   <div class="user-index-profile-content">
-    <%= image_tag user.image.url, :size =>'50x50', class: "users-index-user-image" %>
-    <%= link_to user.username, user, class: "users-index-username btn-hover" %>
-  </div> 
+    <div>
+      <%= image_tag user.image.url, :size =>'50x50', class: "users-index-user-image" %>
+      <%= link_to user.username, user, class: "users-index-username btn-hover font-weight-bold" %>
+    </div>
+    <div class="user-introduce">
+      <small>自己紹介：<%= truncate(user.introduce, length: 100) %></small>
+    </div>
+  </div>
 </li>
