--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -10,16 +10,7 @@
         </div>
       <% end %>
     </div>
-    <% @users.each do |user| %>
-      <ul>
-        <li class="user-index-profile">
-          <div class="user-index-profile-content">
-            <%= image_tag user.image.url, :size =>'50x50', class: "users-index-user-image" %>
-            <%= link_to user.username, user, class: "users-index-username btn-hover" %>
-          </div> 
-        </li>
-      </ul>
-    <% end %>
+    <%= render @users %>
     <div class="all-paginate">
       <%= will_paginate @users, :previous_label => ' &lt 前へ', :next_label => '次へ &gt' %>
     </div>
