--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,8 @@ html {
   background-color: $sub-color;
 }
 
-.font-subcolor {
-  color: $sub-color;
+.btn-color {
+  color: $btn-color;
 }
 
 .main-color {
@@ -58,6 +58,10 @@ li {
 
 .footer-space {
   padding-bottom: 20px;
+}
+
+.header-space {
+  padding-top: 20px;
 }
 
 
@@ -174,43 +178,38 @@ footer {
 
 
 /*form*/
+.main-form {
+  margin: auto;
+  padding: 50px;
+  border: solid $hover-color 1px;
+}
+
 .form-username {
-  text-align: center;
-  color: white;
   margin-bottom: 30px;
+  color: $btn-color;
 }
 
 .form-email {
-  text-align: center;
-  color: white;
   margin-bottom: 30px;
+  color: $btn-color;
 }
 
 .form-password {
-  text-align: center;
-  color: white;
   margin-bottom: 30px;
+  color: $btn-color;
 }
 
 .form-image {
-  text-align: center;
-  color: white;
   margin-bottom: 30px;
+  color: $btn-color;
 }
 
 .form-introduce {
-  text-align: center;
-  color: white;
   margin-bottom: 30px;
-}
-
-.field-area {
-  width: 30%;
+  color: $btn-color;
 }
 
 .btn-remember {
-  text-align: center;
-  color: white;
   margin-bottom: 30px;
 }
 
@@ -228,8 +227,10 @@ footer {
 
 .form-heading {
   text-align: center;
-  padding-top: 50px;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  border-bottom: solid $hover-color 1px ;
 }
 
 .delete-btn {
@@ -241,16 +242,11 @@ footer {
   margin-left: 35%;
 }
 
-.registrations-edit {
-  padding-bottom: 100px;
-}
-
-
 
 /*shared-links*/
 .shared-links{
-  margin-left: 34%;
-  padding-bottom: 100px;
+  margin: auto;
+  padding-bottom: 20px;
 }
 
 
@@ -653,27 +649,9 @@ footer {
     }
   }
 
-  .field-area {
-    width: 40%;
-  }
-
-  .shared-links{
-    margin-left: 30%;
-  }
-
-  .actions {
-  .submit-btn {
-    width: 40%;
-    }
-  }
-
   .font-error {
     margin-left: 20%;
     color: $main-color;
-  }
-
-  .back-btn {
-    margin-left: 30%;
   }
 }
 
@@ -685,25 +663,7 @@ footer {
     }
   }
 
-  .field-area {
-    width: 60%;
-  }
-
-  .shared-links{
-    margin-left: 20%;
-  }
-
-  .actions {
-  .submit-btn {
-      width: 60%;
-    }
-  }
-
   .font-error {
     margin-left: 10%;
-  }
-
-  .back-btn {
-    margin-left: 20%;
   }
 }
