--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,4 +1,4 @@
 <!-- メール用パスワード変更完了文 -->
 <p>Hello <%= @resource.email %>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>パスワードが変更されたことをお知らせします。</p>
