--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,9 +1,9 @@
 <!-- メール用パスワードリセット文 -->
 <p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>誰かパスワード変更の要求をしました。以下のリンクからこれを行うことが出来ます。</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>もし心当たりがない場合はこのメールを無視してください。</p>
+<p>上記のリンクにアクセスして新しいパスワードを作成するまで、パスワードは変更されません</p>
