--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,19 +1,24 @@
 <% provide(:title, "new") %>
 <div class="background-color">
-  <h2 class="font-color form-heading">パスワードをお忘れですか？</h2>
+<div class="header-space"></div>
+  <div class="container">
+    <div class="main-color main-form col-lg-7">
+      <h2 class="form-heading font-weight-bold">パスワードをお忘れですか？</h2>
 
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field form-email">
-      <%= f.label "メールアドレス" %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "field-area" %>
+        <div class="form-email form-group font-weight-bold">
+          <%= f.label "メールアドレス" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "確認用メールを送信する", class: "btn btn-success btn-lg btn-block" %>
+        </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
     </div>
-
-    <div class="actions">
-      <%= f.submit "確認用メールを送信する", class: "submit-btn" %>
-    </div>
-  <% end %>
-
-  <%= render "devise/shared/links" %>
+  </div>
+  <div class="header-space"></div>
 </div>
