--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,62 +1,59 @@
 <% provide(:title, "edit") %>
-<div class="background-color registrations-edit">
-  <h2 class="font-color form-heading">プロフィール変更</h2>
+<div class="background-color">
+  <div class="header-space"></div>
+  <div class="container">
+    <div class="main-color main-form col-lg-7">
+      <h2 class="form-heading font-weight-bold">プロフィール変更</h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field form-username">
-      <%= f.label "ユーザーネーム" %><br />
-      <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "field-area" %>
-    </div>
+        <div class="form-username form-group font-weight-bold">
+          <%= f.label "ユーザーネーム" %><br />
+          <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "form-control" %>
+        </div>
 
-    <div class="field form-introduce">
-      <%= f.label "自己紹介" %><br />
-      <%= f.text_area :introduce, autofocus: true, class: "field-area" %>
-    </div>
+        <div class="form-introduce form-group font-weight-bold">
+          <%= f.label "自己紹介" %><br />
+          <%= f.text_area :introduce, autofocus: true, class: "form-control" %>
+        </div>
 
-    <div class="field form-email">
-      <%= f.label "メールアドレス" %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "field-area" %>
-    </div>
+        <div class="form-email form-group font-weight-bold">
+          <%= f.label "メールアドレス" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+        </div>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-    <% end %>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
 
-    <div class="field form-password">
-      <%= f.label "パスワード" %> <i>(変更したくない場合は空欄)</i><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: "field-area" %>
-      <% if @minimum_password_length %>
-        <br />
-        <em><%= @minimum_password_length %>文字以上</em>
+        <div class="form-password form-group font-weight-bold">
+          <%= f.label "パスワード" %> <i>(変更したくない場合は空欄)(<%= @minimum_password_length %>文字以上)</i><br />
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+        </div>
+
+        <div class="form-password form-group font-weight-bold">
+          <%= f.label "確認用パスワード" %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+        </div>
+
+        <div class="form-image form-group font-weight-bold">
+          <%= f.label "プロフィール画像" %><br />
+          <%= f.file_field :image %>
+        </div>
+
+        <div class="form-password form-group font-weight-bold">
+          <%= f.label "現在のパスワード" %><br><small>(ユーザー情報を変更するためには現在のパスワードを入力してください)</small><br />
+          <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "変更する", class: "btn btn-success btn-lg btn-block"  %>
+        </div>
       <% end %>
+      <p>ユーザー削除</p>
+      <p class="text-center"><%= button_to "ユーザーを削除する", registration_path(resource_name), data: { confirm: "本当に削除しますか？" }, method: :delete, class: "btn btn-danger btn-sm btn-block" %></p>
     </div>
-
-    <div class="field form-password">
-      <%= f.label "確認用パスワード" %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "field-area" %>
-    </div>
-
-    <div class="field form-image">
-      <%= f.label "プロフィール画像" %><br />
-      <%= f.file_field :image, class: "field-area" %>
-    </div>
-
-    <div class="field form-password">
-      <%= f.label "現在のパスワード" %> <i>(ユーザー情報を変更するためには現在のパスワードを入力してください)</i><br />
-      <%= f.password_field :current_password, autocomplete: "current-password", class: "field-area" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "変更する", class: "submit-btn"  %>
-    </div>
-  <% end %>
-
-  <h3 class="font-color text-center">ユーザー削除</h3>
-
-  <div class="text-center">
-    <p class="font-color text-center"><%= button_to "ユーザーを削除する", registration_path(resource_name), data: { confirm: "本当に削除しますか？" }, method: :delete, class: "delete-btn" %></p>
   </div>
-  <%= link_to "戻る", :back, class: "back-btn" %>
+  <div class="footer-space"></div>
 </div>
