--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,47 +1,52 @@
 <% provide(:title, "sign up") %>
 <div class="background-color">
-  <h2 class="font-color form-heading">新規登録</h2>
+  <div class="header-space"></div>
+  <div class="container">
+    <div class="main-color main-form col-lg-7">
+      <h2 class="form-heading font-weight-bold">新規登録</h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field form-username">
-      <%= f.label "ユーザーネーム(必須)" %><br />
-      <%= f.text_field :username, class: "field-area" %>
+        <div class="form-username form-group font-weight-bold">
+          <%= f.label "ユーザーネーム(必須)" %><br />
+          <%= f.text_field :username, class: "form-control" %>
+        </div>
+
+        <div class="form-email form-group font-weight-bold">
+          <%= f.label "メールアドレス(必須)" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+        </div>
+
+        <div class="form-password form-group font-weight-bold">
+          <%= f.label "パスワード(必須)" %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %>文字以上)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+        </div>
+
+        <div class="form-password form-group font-weight-bold">
+          <%= f.label "確認用パスワード(必須)" %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+        </div>
+
+        <div class="form-image form-group font-weight-bold">
+          <%= f.label "プロフィール画像" %><br />
+          <%= f.file_field :image %>
+        </div>
+
+        <div class="form-introduce form-group font-weight-bold">
+          <%= f.label "自己紹介" %><br />
+          <%= f.text_area :introduce, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "新規登録", class: "btn btn-success btn-lg btn-block" %>
+        </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
     </div>
-
-    <div class="field form-email">
-      <%= f.label "メールアドレス(必須)" %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "field-area" %>
-    </div>
-
-    <div class="field form-password">
-      <%= f.label "パスワード(必須)" %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %>文字以上)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: "field-area" %>
-    </div>
-
-    <div class="field form-password">
-      <%= f.label "確認用パスワード(必須)" %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "field-area" %>
-    </div>
-
-    <div class="field form-image">
-      <%= f.label "プロフィール画像" %><br />
-      <%= f.file_field :image, class: "field-area" %>
-    </div>
-
-    <div class="field form-introduce">
-      <%= f.label "自己紹介" %><br />
-      <%= f.text_area :introduce, autofocus: true, class: "field-area" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "新規登録", class: "submit-btn" %>
-    </div>
-  <% end %>
-
-  <%= render "devise/shared/links" %>
+  </div>
+  <div class="header-space"></div>
 </div>
