--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,17 +1,17 @@
 <div class="shared-links">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "ログイン", new_session_path(resource_name), class: "font-color" %><br />
+    <%= link_to "ログイン", new_session_path(resource_name) %><br />
   <% end %>
 
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "新規登録", new_registration_path(resource_name), class: "font-color" %><br />
+    <%= link_to "新規登録", new_registration_path(resource_name) %><br />
   <% end %>
 
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "パスワードをお忘れですか？", new_password_path(resource_name), class: "font-color" %><br />
+    <%= link_to "パスワードをお忘の方", new_password_path(resource_name) %><br />
   <% end %>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-    <%= link_to "確認メールを再送信する。", new_confirmation_path(resource_name), class: "font-color" %><br />
+    <%= link_to "アカウント認証メールを再送信する", new_confirmation_path(resource_name) %><br />
   <% end %>
 </div>
