--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -3,12 +3,14 @@
   <div class="container">
     <h1 class="text-center user-index-heading">ユーザー検索</h1>
     <div>
-      <%= form_tag(search_users_path,:method => 'get') do %>
-        <div class="user-index-search-form">
-          <%= text_field_tag :search, "", {class: "user-index-field"} %>
-          <%= submit_tag 'ユーザー名検索', :name => nil, class: "btn-search btn-primary" %>
-        </div>
-      <% end %>
+      <div class="form-group">
+        <%= form_tag(search_users_path,:method => 'get') do %>
+          <div class="user-index-search-form">
+            <%= text_field_tag :search, "", {class: "user-index-field form-control"} %>
+            <%= submit_tag 'ユーザー名検索', :name => nil, class: "btn btn-user-search font-weight-bold" %>
+          </div>
+        <% end %>
+      </div>
     </div>
     <%= render @users %>
     <div class="all-paginate">
