--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,10 +1,10 @@
-<li class="user-index-profile">
-  <div class="user-index-profile-content">
+<li class="users-index-profile">
+  <div class="users-index-profile-content">
     <div>
       <%= image_tag user.image.url, :size =>'50x50', class: "users-index-user-image" %>
       <%= link_to user.username, user, class: "users-index-username btn-hover font-weight-bold" %>
     </div>
-    <div class="user-introduce">
+    <div class="users-introduce">
       <small>自己紹介：<%= truncate(user.introduce, length: 100) %></small>
     </div>
   </div>
