--- a/app/views/album_boards/show.html.erb
+++ b/app/views/album_boards/show.html.erb
@@ -22,7 +22,10 @@
       </div>
     </div>
     <div>
-      <%= render 'board_reviews/index' %>
+    <div class="header-space"></div>
+      <% if @boardreviews.present? %>
+        <%= render 'board_reviews/index' %>
+      <% end %>
     </div>
   </div>
 <div>
