--- a/app/views/board_reviews/_index.html.erb
+++ b/app/views/board_reviews/_index.html.erb
@@ -12,7 +12,7 @@
         <div class="review-title">
           <p class="font-weight-bold"><%= boardreview.title %></p>
         </div>
-        <small>評価: <%= boardreview.score %>/5</small>
+        <small>評価: <%= boardreview.score %>/5点</small>
       </div>
       <div>
         <p><%= simple_format(boardreview.content) %></p>
