--- a/app/views/pages/_index.html.erb
+++ b/app/views/pages/_index.html.erb
@@ -1,6 +1,6 @@
 <div class="background-color pages-index">
   <div class="container">
-    <h2 class = "album-index-heading">レビューページ一覧</h2>
+    <h2 class = "album-index-heading font-weight-bold">レビューページ一覧</h2>
     <div>
       <% albumboards.each do |albumboard| %>
         <div class = "index">
