--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,6 +3,9 @@
     <div>
       <%= image_tag user.image.url, :size =>'50x50', class: "users-index-user-image" %>
       <%= link_to user.username, user, class: "users-index-username btn-hover font-weight-bold" %>
+      <% if current_user.admin? && !current_user?(user) %>
+        <%= link_to "削除", user, method: :delete, data: { confirm: "本当に削除しますか？" } %>
+      <% end %>
     </div>
     <div class="users-introduce">
       <small>自己紹介：<%= truncate(user.introduce, length: 100) %></small>
