--- a/app/views/album_boards/index.html.erb
+++ b/app/views/album_boards/index.html.erb
@@ -28,6 +28,11 @@
                     <div class="star-rating-front" style="width: <%= albumboard.board_review_score_percentage %>%">★★★★★</div>
                     <div class="star-rating-back">★★★★★</div>
                   </div>
+                  <% if current_user.admin? %>
+                    <div>
+                      <%= link_to "削除", albumboard, method: :delete, data: { confirm: "本当に削除しますか？" } %>
+                    </div>
+                  <% end %>
                 </div>
               </div>
             <% end %>
