--- a/app/views/users/_review_index.html.erb
+++ b/app/views/users/_review_index.html.erb
@@ -1,5 +1,5 @@
  <% if @user.board_reviews.present? %>
-  <h4 class="text-center"><%= @user.username %>のレビュー一覧</h4>
+  <h4 class="text-center font-weight-bold"><%= @user.username %>のレビュー一覧</h4>
   <% @review_albums.each do |review_album| %>
     <div class="main-color user-reviews">
       <div class="row">
