--- a/app/views/album_boards/index.html.erb
+++ b/app/views/album_boards/index.html.erb
@@ -5,9 +5,8 @@
       <div class="form-group">
         <%= search_form_for @q do |f| %>
           <div class="index-search-form">
-            <%= f.label :albums, "アルバム名", class: "font-weight-bold" %>
             <%= f.search_field :albums_cont, class: "index-field form-control" %>
-            <%= f.submit "検索", class: "btn btn-search font-weight-bold" %>
+            <%= f.submit "アルバム名検索", class: "btn btn-search font-weight-bold" %>
           </div>
         <% end %>
       </div>
