--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,6 +1,6 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
-    <h5 class="font-color font-error">
+  <div class="error" id="error_explanation">
+    <h5 class="text-danger font-error">
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
@@ -8,7 +8,7 @@
     </h5>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li class="font-color font-error"><%= message %></li>
+        <li class="text-danger font-error error-list"><%= message %></li>
       <% end %>
     </ul>
   </div>
