--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,7 +42,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "新規登録", class: "btn btn-success btn-lg btn-block" %>
+          <%= f.submit "新規登録する", class: "btn btn-success btn-lg btn-block" %>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
