add systemspec to users_spec

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -18,7 +18,7 @@
         </div>
 
         <div class="form-password form-group font-weight-bold">
-          <%= f.label "確認用パスワード", "Confirm new password" %><br />
+          <%= f.label "確認用パスワード" %><br />
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
         </div>
 
