--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,12 @@
 <% provide(:title, "new") %>
 <div class="background-color">
+<%= render "devise/shared/error_messages", resource: resource %>
 <div class="header-space"></div>
   <div class="container">
     <div class="main-color main-form col-lg-7">
-      <h2 class="form-heading font-weight-bold">パスワードをお忘れですか？</h2>
+      <h2 class="form-heading font-weight-bold">パスワードの再設定</h2>
 
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="form-email form-group font-weight-bold">
           <%= f.label "メールアドレス" %><br />
@@ -14,7 +14,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "確認用メールを送信する", class: "btn btn-success btn-lg btn-block" %>
+          <%= f.submit "メールを送信する", class: "btn btn-success btn-lg btn-block" %>
         </div>
       <% end %>
       <%= render "devise/shared/links" %>
