add systemspec to board_review

--- a/app/views/album_boards/index.html.erb
+++ b/app/views/album_boards/index.html.erb
@@ -6,7 +6,7 @@
         <%= search_form_for @q do |f| %>
           <div class="index-search-form">
             <%= f.search_field :albums_cont, class: "index-field form-control" %>
-            <%= f.submit "アルバム名検索", class: "btn btn-search font-weight-bold" %>
+            <%= f.submit "アルバム検索", class: "btn btn-search font-weight-bold" %>
           </div>
         <% end %>
       </div>
