--- a/app/views/users/_review_index.html.erb
+++ b/app/views/users/_review_index.html.erb
@@ -15,7 +15,7 @@
           <div class="user-review-heading">
             <div class="font-weight-bold text-center">
               <%= review_album.title %>
-              <small>評価: <%= review_album.score %>/5</small>
+              <small>評価: <%= review_album.score %>/5点</small>
             </div>
           </div>
           <p><%= simple_format(review_album.content) %></p>
