--- a/app/views/album_boards/search.html.erb
+++ b/app/views/album_boards/search.html.erb
@@ -7,7 +7,7 @@
         <%= form_with url: search_album_boards_path, method: :get, local: true do |f| %>
           <div class="form-group">
             <%= f.text_field :search, class:"index-field form-control" %>
-            <%= f.submit 'アルバム名検索', name: nil,class:"btn btn-search font-weight-bold" %>
+            <%= f.submit 'アルバム検索', name: nil,class:"btn btn-search font-weight-bold" %>
           </div>
         <% end %>
       </div>
