--- a/app/views/album_boards/index.html.erb
+++ b/app/views/album_boards/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "レビューページ検索") %>
 <div class="background-color pages-index">
   <div class="container">
     <h2 class = "album-index-heading font-weight-bold">レビューページ検索</h2>
