--- a/app/views/album_boards/search.html.erb
+++ b/app/views/album_boards/search.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "search") %>
+<% provide(:title, "アルバム検索") %>
 <section class="text-center search-page">
   <div class="background-color">
     <div class="row d-flex justify-content-center album-search-form">
