--- a/app/views/album_boards/_favorite_btn.html.erb
+++ b/app/views/album_boards/_favorite_btn.html.erb
@@ -1,12 +1,12 @@
 <div id="favorite_btn_<%= board_reivew.id %>">
   <% unless board_reivew.user == current_user %>
     <% if current_user.already_favorite?(board_reivew) %>
-      <%= link_to favorite_path(id: board_reivew.id), method: :delete, remote: true do %>
-      <i class="fas fa-heart red-text animated heartBeat"></i>
+      <%= link_to favorite_path(id: board_reivew.id), method: :delete, remote: true, class: "fas-link" do %>
+        <i class="fas fa-heart red-text animated heartBeat"></i>
       <% end %>
     <% else %>
-      <%= link_to favorites_path(id: board_reivew.id), method: :post, remote: true do %>
-      <i class="far fa-heart red-text animated flash"></i>
+      <%= link_to favorites_path(id: board_reivew.id), method: :post, remote: true, class: "far-link" do %>
+        <i class="far fa-heart red-text animated flash"></i>
       <% end %>
     <% end %>
   <% end %>
