--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="text-white footer-color">
-  <footer class="footer">
+  <footer class="footer container">
     <small>
       Made by Tatsuma Arakawa</a>
     </small>
