--- a/app/views/album_boards/index.html.erb
+++ b/app/views/album_boards/index.html.erb
@@ -1,12 +1,12 @@
 <% provide(:title, "レビューページ検索") %>
 <div class="background-color pages-index">
   <div class="container">
-    <h2 class = "album-index-heading font-weight-bold">レビューページ検索</h2>
+    <h2 class = "album-index-heading font-weight-bold pb-4">レビューページ検索</h2>
     <div>
       <div class="form-group">
         <%= search_form_for @q do |f| %>
           <div class="index-search-form">
-            <%= f.search_field :albums_cont, class: "index-field form-control" %>
+            <%= f.search_field :albums_cont, class: "index-field form-control", placeholder: "アルバム名" %>
             <%= f.submit "アルバム検索", class: "btn btn-search font-weight-bold" %>
           </div>
         <% end %>
