--- a/app/views/album_boards/search.html.erb
+++ b/app/views/album_boards/search.html.erb
@@ -6,13 +6,12 @@
         <h2 class="font-weight-bold pb-4">アルバム検索</h2>
         <%= form_with url: search_album_boards_path, method: :get, local: true do |f| %>
           <div class="form-group">
-            <%= f.text_field :search, class:"index-field form-control" %>
-            <%= f.submit 'アルバム検索', name: nil,class:"btn btn-search font-weight-bold" %>
+            <%= f.text_field :search, class:"index-field form-control", placeholder: "アルバム名・アーティスト名" %>
+            <%= f.submit 'アルバム検索', class:"btn btn-search font-weight-bold" %>
           </div>
         <% end %>
       </div>
     </div>
-
     <% if @searchalbums.present? %>
     <div class="main-color search-results">
       <div class="header-space"></div>
@@ -20,19 +19,16 @@
       <div class="row row-cols-1 row-cols-md-4">
         <% @searchalbums.each_with_index do |searchalbum, index| %>
           <div class="col-lg-3 mb-4 d-flex justify-content-center">
-            <div class="card-cascade m-1">
-              <div class="view view-cascade overlay">
-                <% if searchalbum.images.any?%>
-                  <div class = "album-image background-maincolor">
-                    <%image = searchalbum.images[1]%>
-                    <%= image_tag image["url"],:size =>'242x242' %>
-                  </div>
-                  <%= searchalbum.name %>
-                <% else %>
-                  <%= image_tag "default.jpg",:size =>'242x242' %>
-                <% end %>
-              </div>
-
+            <div class="m-1">
+              <% if searchalbum.images.any?%>
+                <div class = "album-image background-maincolor">
+                  <%image = searchalbum.images[1]%>
+                  <%= image_tag image["url"],:size =>'240x240' %>
+                </div>
+                <%= searchalbum.name %>
+              <% else %>
+                <%= image_tag "default.jpg",:size =>'240x240' %>
+              <% end %>
               <div>
                 <% if @albumboards.pluck("albums").include?(searchalbum.name) %>
                   <p>既にレビューページが存在します</p>
