--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -14,12 +14,12 @@
           <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %>文字以上)</em><br />
           <% end %>
-          <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
+          <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control", placeholder: "パスワードを入力してください" %>
         </div>
 
         <div class="form-password form-group font-weight-bold">
           <%= f.label "確認用パスワード" %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "パスワードを入力してください" %>
         </div>
 
         <div class="actions">
