--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,8 @@
 <header class="navbar text-white bg-dark sticky-top">
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <%= link_to 'Sharemusic', root_path, class: "navbar-brand" %>
+  <nav class="navbar navbar-expand-lg navbar-light container">
+    <%= link_to root_path do %>
+      <%= image_tag "sharemusic_logo.png", width: "150px" %>
+    <% end %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,19 +10,23 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to 'マイページ', current_user, class: "header-tag" %>
+            <%= link_to 'レビューページ一検索', album_boards_path, class: "header-tag", data: {"turbolinks" => false} %>
           </li>
           <li class="nav-item">
-            <%= link_to 'ユーザー検索', search_users_path, class: "header-tag" %>
+            <%= link_to 'アルバムを探す', search_album_boards_path, class: "header-tag", data: {"turbolinks" => false} %>
           </li>
           <li class="nav-item">
-            <%= link_to 'レビューページ一検索', album_boards_path, class: "header-tag" %>
+            <%= link_to 'ユーザー検索', search_users_path, class: "header-tag", data: {"turbolinks" => false} %>
           </li>
-          <li class="nav-item">
-            <%= link_to 'アルバムを探す', search_album_boards_path, class: "header-tag" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "header-tag" %>
+          <li class="nav-item dropdown">
+            <a class="dropdown-toggle header-tag" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" turbolinks="false" data-turbolinks= "false">
+              マイページ
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+              <%= link_to 'マイページ', current_user, class: "dropdown-item", data: {"turbolinks" => false} %>
+              <%= link_to '設定', edit_user_registration_path, class: "dropdown-item", data: {"turbolinks" => false} %>
+              <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item", data: {"turbolinks" => false} %>
+            </div>
           </li>
         <% else %>
           <li class="nav-item">
