--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,18 +3,16 @@
   <%= render partial: 'index', locals: { albumboards: @albumboards } %>
 <% else %>
   <div class="center jumbotron">
-    <h1 class="home-heading">Let's sharemusic!</h1>
-    <div class="home-btn">
-      <%= link_to "ゲストユーザーでログイン", users_guest_sign_in_path, method: :post, class: "btn btn-border" %>
-    </div>  
+    <div class="background-home">
+      <h1><%= image_tag "sharemusic_logo.png", width: "300px", class: "home-logo" %></h1>
+      <div class="home-btn">
+        <%= link_to "ゲストユーザーでログイン", users_guest_sign_in_path, method: :post, class: "btn btn-border" %>
+      </div>
+    </div>
   </div>
   <div class="center top-description">
-    <h1>sharemusicとは</h1>
-    <p>音楽をサブスクで聴くことが一般的になり<br>聴きたい音楽がすぐ聴ける面白い世の中になった。</p>
-    <p>しかし、お金をを貯めて、CDやレコード買う。<br>そして、聴き込む。</p>
-    <p>歌詞はもちろん<br>次に何の曲が流れるかまで完全に把握していたあの頃も面白かった。</p>
-    <p>今よりもアーティストが届けたいものを必死に理解しようとしていた。<br>そんな気がする。</p>
-    <p>聴きたい曲をいつでも聴ける便利な現代だからこそ<br>音楽について感じたこと、考えたことを文字起こしすることによって</p>
+    <div class="text-center pb-4"><%= image_tag "sharemusic_logo.png", width: "200px" %></div>
+    <p>聴きたい音楽をいつでも聴ける便利な現代だからこそ<br>音楽について感じたこと、考えたことを文字起こしして</p>
     <p class="end-description">音楽と真剣に向き合ってみませんか？</p>
     </p>
   </div>
