--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,11 +1,11 @@
 <% provide(:title, "ユーザー検索") %>
 <div class="background-color">
   <div class="container">
-    <h2 class="text-center users-index-heading font-weight-bold">ユーザー検索</h2>
+    <h2 class="text-center users-index-heading font-weight-bold pb-4">ユーザー検索</h2>
     <div class="form-group">
       <%= form_tag(search_users_path,:method => 'get') do %>
         <div class="index-search-form">
-          <%= text_field_tag :search, "", {class: "index-field form-control"} %>
+          <%= text_field_tag :search, "", {class: "index-field form-control", placeholder: "ユーザー検索"} %>
           <%= submit_tag 'ユーザー名検索', :name => nil, class: "btn btn-search font-weight-bold" %>
         </div>
       <% end %>
