--- a/app/views/album_boards/index.html.erb
+++ b/app/views/album_boards/index.html.erb
@@ -16,7 +16,7 @@
           <div class = "index-albumboard">
             <%= link_to album_board_path(albumboard.id), class: "index-link" do %>
               <div class = "row">
-                <div class = "col-lg-4">
+                <div class = "col-lg-4 text-center">
                   <%= image_tag "#{albumboard.icon}",:size =>'300x300', class: "index-album-image" %>
                 </div>
                 <div class = "col-lg-8 index-album-information">
