--- a/app/views/album_boards/show.html.erb
+++ b/app/views/album_boards/show.html.erb
@@ -25,6 +25,10 @@
     <div class="header-space"></div>
       <% if @boardreviews.present? %>
         <%= render 'board_reviews/index' %>
+      <% else %>
+        <div class="else-footer">
+         <p class="text-center font-weight-bold">レビューが存在しません</p>
+        </div>
       <% end %>
     </div>
   </div>
