--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar text-white bg-dark sticky-top">
+<header class="navbar text-white bg-header sticky-top">
   <nav class="navbar navbar-expand-lg navbar-light container">
     <%= link_to root_path do %>
       <%= image_tag "sharemusic_logo.png", width: "150px" %>
