--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="center top-description">
     <div class="text-center pb-4"><%= image_tag "sharemusic_logo.png", width: "200px" %></div>
-    <p>聴きたい音楽をいつでも聴ける便利な現代だからこそ<br>音楽について感じたこと、考えたことを文字起こしして</p>
+    <p>聴きたい音楽をいつでも気軽に聴ける時代だからこそ<br>音楽について感じたこと、考えたことを文字起こしして</p>
     <p class="end-description">音楽と真剣に向き合ってみませんか？</p>
     </p>
   </div>
