--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,6 +25,19 @@
           <%= link_to "プロフィール編集", edit_user_registration_path, class: "profile-setting"  %>
         </div>
       <% end %>
+      <% if @user.id == current_user.id %>
+      <% else %>
+        <% if @isRoom == true %>
+          <p><a href="/rooms/<%= @roomId %>">チャットへ</a>
+        <% else %>
+          <%= form_for @room do |f| %>
+            <%= fields_for @entry do |e| %>
+              <%= e.hidden_field :user_id, :value=> @user.id %>
+            <% end %>
+            <%= f.submit "チャットを始める" %>
+          <% end %>
+        <% end %>
+      <% end %>
       <%= render "review_index" %>
       <div class="user-paginate">
         <%= will_paginate @review_albums, :previous_label => ' &lt 前へ', :next_label => '次へ &gt' %>
