--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
       <% if @user.id == current_user.id %>
       <% else %>
         <% if @isRoom == true %>
-          <p><a href="/rooms/<%= @roomId %>">チャットへ</a>
+          <p><a href="/rooms/<%= @roomId %>"><i class="far fa-envelope message-icon font-weight-bold">メッセージ</i></a>
         <% else %>
           <%= form_for @room do |f| %>
             <%= fields_for @entry do |e| %>
