--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,23 +1,35 @@
-<% @entries.each do |e| %>
-  <h5><strong><a href="/users/<%= e.user.id %>"><%= e.user.username%></a></strong></h5>
-<% end %>
-
-<hr>
-<% if @messages.present? %>
-  <% @messages.each do |m| %>
-    <strong><%= m.content %></strong>
-    <small>by <strong><a href="/users/<%= m.user_id %>"><%= m.user.username %></a></strong></small>
+<% provide(:title, "メッセージ") %>
+<div class="background-color">
+  <div class="container">
+    <div class="room-users">
+      <h5 class="font-weight-bold">メッセージルーム</h5>
+      <% @entries.each do |e| %>
+        <p><strong><a href="/users/<%= e.user.id %>", class="text-dark"><%= image_tag e.user.image.url, :size =>'50x50', class: "message-users" %><%= e.user.username%></a></strong></p>
+      <% end %>
+    </div>
     <hr>
-  <% end %>
-<% else %>
-  <h3 class="text-center">メッセージはまだありません</h3>
-<% end %>
+    <% if @messages.present? %>
+      <% @messages.each do |m| %>
+        <div class="row">
+          <div class="col-lg-12">
+            <%= image_tag m.user.image.url, :size =>'30x30', class: "message-user" %>
+            <%= m.user.username %>
+          </div>
+          <div class="col-lg-12">
+            <div class="balloon2-top">
+              <p><%=simple_format(m.content)%></p>
+            </div>
+            <hr>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+    <%= render 'form' %>
+  </div>
+</div>
 
-<%= form_for @message do |f| %>
-  <%= f.text_field :content, :placeholder => "メッセージを入力して下さい" , :size => 70 %>
-  <%= f.hidden_field :room_id, :value => @room.id %>
-  <br>
-  <%= f.submit "投稿する" %>
-<% end %>
-
-<%= link_to "戻る", user_path %>
+<script>
+  setTimeout(function() {
+      window.scroll(0,$(document).height());
+  },0);
+</script>
