--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -389,7 +389,7 @@ footer {
 .balloon2-top {
   position: relative;
   display: inline-block;
-  margin: 1.5em 0;
+  margin: 1.5em 0 0 0;
   padding: 7px 10px;
   min-width: 120px;
   max-width: 100%;
@@ -432,6 +432,10 @@ footer {
   width: 100%;
   height: 50px;
   max-width: 800px;
+}
+
+.message-destroy {
+  color: $btn-color;
 }
 
 
