--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -2,6 +2,6 @@
   <%= f.text_area :content, class: "text-area-message", placeholder: "メッセージを入力して下さい" %>
   <%= f.hidden_field :room_id, :value => @room.id %>
   <br>
-  <%= f.submit "投稿する" %>
+  <%= f.submit "送信" %>
 <% end %>
 <div class="footer-space"></div>
